tests/error/comptime/check_slice_construction18.bz
// error: invalid memory range for a slice of type '[: int32]'
// note: while evaluating expression at compile time
// note: begin and end addresses point to different allocations
// note: begin address points to an object in this allocation
// note: allocation was made while evaluating expression at compile time
// note: end address points to an object in this allocation
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(p);
		__builtin_inplace_construct(p, 0);
		const q = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(q);
		__builtin_inplace_construct(q, 0);

		__builtin_slice_from_ptrs(p, q);
	});
}
